# CleanAdvice-Live

./: .env.example  .gitignore  BUILD_STATUS.md  CODEX_BUILD_PROMPT.md  DEPLOYMENT.md  Dockerfile  README.md  RUNTIME_CHECKLIST.md  TESTING.md  docker-compose.yml  package.json
.github/workflows/: build.yml
agent/: Dockerfile  pyproject.toml
agent/src/: agent.py  config.py
app/: error.jsx  globals.css  layout.jsx  not-found.jsx  page.jsx
app/api/diagnostics/: route.js
app/api/health/: route.js
app/api/quote/: route.js
app/api/route-message/: route.js
app/api/service/: route.js
app/api/token/: route.js
app/diagnostics/: page.jsx
app/quote/: page.jsx
app/router-test/: page.jsx
app/service/: page.jsx
app/status/: page.jsx
app/test/: page.jsx
app/test-room/: page.jsx
components/: ApiTester.jsx  CleanAdviceCall.jsx  DiagnosticRunner.jsx  DiagnosticsList.jsx  MvpNavigation.jsx  QuoteForm.jsx  RouterTester.jsx  ServiceForm.jsx
data/diagnostics/: no-water-pickup.json  streaks.json
data/knowledge/machines/: i-mop-lite.json  i-vac-6.json  (+1 more)
docs/: ADMIN_BLUEPRINT.md  AI_ROUTING_ENGINE.md  CLEAN_KNOWLEDGE.md  MVP_BACKLOG.md
knowledge/floor-types/: rubbervloer.md
knowledge/troubleshooting/: INDEX.md  SRV-001-geen-wateropname.md  SRV-002-strepen-achterlaten.md  SRV-003-borstel-draait-niet.md
lib/: diagnostics.js  router.js
rules/: floor-advice.rules.md  service-routing.rules.md
schemas/: quote-intake.schema.md  service-ticket.schema.md
scripts/: check-project.mjs
workflows/: WF-QUOTE-001-offerte-intake.md  WF-SRV-001-service-diagnose.md
(+2 files in other folders)
